--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <script src="./js/footer.js"></script> 
         <script src="./js/script.js"></script>
         <script src="./js/go-top.js"></script>
-
+        <script src="./js/scrollIndicator.js"></script>
         <script>
             console.error('Рускій воєнний корабль, іді нах#й!');
         </script>
