--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <script src="./js/header.js"></script> 
         <script src="./js/footer.js"></script> 
         <script src="./js/script.js"></script>
-        <script src="./js/go-top.js"></script>
+       <!-- <script src="./js/go-top.js"></script> -->
         <script src="./js/scrollIndicator.js"></script>
         <script>
             console.error('Рускій воєнний корабль, іді нах#й!');
