--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
         <script>
             console.error('Рускій воєнний корабль, іді нах#й!');
         </script>
-       
+       <script>
+            window.replainSettings = { id: '72767467-a1e5-428a-8442-280acbd87beb' };
+            (function(u){var s=document.createElement('script');s.async=true;s.src=u;
+            var x=document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);
+            })('https://widget.replain.cc/dist/client.js');
+        </script>
     </body>  
 </html>
