--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 </div>
             </div>
         </div>
-        <div class="container">
+        <!--<div class="container">
             <footer id="footer"></footer>
-        </div>
+        </div>-->
         
         <!-- Java Script -->  
         <script src="./js/data.js"></script>
