--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                 </div>
             </div>
         </div>
+        <a title="Telegram" href="https://t.me/patrol_police_zp">
+            <img src="./images/telegram-icon.svg" alt="Telegram">
+        </a>
         <!--<div class="container">
             <footer id="footer"></footer>
         </div>-->
