--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
         </div>
-        <a title="Telegram" href="https://t.me/patrol_police_zp">
+        <a title="Telegram" href="https://t.me/patrol_police_zp" target="_blank">
             <img src="./images/telegram-icon.svg" alt="Telegram">
         </a>
         <!--<div class="container">
