--- a/index.html
+++ b/index.html
@@ -49,50 +49,20 @@
         <a class="messenger-links" title="Telegram" href="https://t.me/patrol_police_zp" target="_blank">
             <img src="./images/telegram-icon.svg" alt="Telegram">
         </a>
-        <!--<div class="container">
+        <div class="container">
             <footer id="footer"></footer>
-        </div>-->
+        </div>
         
         <!-- Java Script -->  
         <script src="./js/data.js"></script>
         <script src="./js/header.js"></script> 
-        <!-- <script src="./js/footer.js"></script> -->
+        <script src="./js/footer.js"></script>
         <script src="./js/script.js"></script>
         <script src="./js/go-top.js"></script> 
         <script src="./js/scrollIndicator.js"></script>
         <script>
             console.error('Рускій воєнний корабль, іді нах#й!');
         </script>
-      <!-- Messenger Плагін чата Code -->
-    <div id="fb-root"></div>
-
-    <!-- Your Плагін чата code -->
-    <div id="fb-customer-chat" class="fb-customerchat">
-    </div>
-
-    <script>
-      var chatbox = document.getElementById('fb-customer-chat');
-      chatbox.setAttribute("page_id", "106743205344198");
-      chatbox.setAttribute("attribution", "biz_inbox");
-    </script>
-
-    <!-- Your SDK code -->
-    <script>
-          window.fbAsyncInit = function() {
-            FB.init({
-              xfbml            : true,
-              version          : 'v13.0'
-            });
-          };
-
-          (function(d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
-            js.src = 'https://connect.facebook.net/ru_RU/sdk/xfbml.customerchat.js';
-            fjs.parentNode.insertBefore(js, fjs);
-          }(document, 'script', 'facebook-jssdk'));
-    </script>
         
     </body>  
 </html>
