--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container">
             <footer id="footer"></footer>
         </div>
-        <a class="messenger-links" title="Telegram" href="https://t.me/patrol_police_zp" target="_blank">
+        <a class="messenger-links hover-block" title="Telegram" href="https://t.me/patrol_police_zp" target="_blank">
             <img src="./images/telegram-icon.svg" alt="Telegram">
         </a>
         
