--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
         <div class="container">
             <footer id="footer"></footer>
         </div>
-        <a class="messenger-links hover-block" title="Telegram" href="https://t.me/patrol_police_zp" target="_blank">
+        <a class="messenger-links" title="Telegram" href="https://t.me/patrol_police_zp" target="_blank">
             <img src="./images/telegram-icon.svg" alt="Telegram">
+            <span class="hover-block"></span>
         </a>
         
         <!-- Java Script -->  
