--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="container">
             <footer id="footer"></footer>
-            <!--<button class="btn-toggle"></button>-->
+            <button class="btn-toggle"></button>
         </div>
         <a class="messenger-links" title="Telegram" href="https://t.me/patrol_police_zp" target="_blank">
             <img src="./images/telegram-icon.svg" alt="Telegram">
