--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         </div>
         <div class="container">
             <footer id="footer"></footer>
-            <!--<button class="btn-toggle"></button>-->
         </div>
+        <button class="btn-toggle"></button>
         <a class="messenger-links" title="Telegram" href="https://t.me/patrol_police_zp" target="_blank">
             <img src="./images/telegram-icon.svg" alt="Telegram">
         </a>
