--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <script src="./js/footer.js"></script>
         <script src="./js/script.js"></script>
         <script src="./js/go-top.js"></script> 
+        <script src="./js/telegramLink.js"></script> 
         <script src="./js/lightTheme.js"></script>
         <script src="./js/scrollIndicator.js"></script>
         <script>
