--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <footer id="footer"></footer>
         </div>
         <button class="btn-toggle"></button>
-        <a class="messenger-links" title="Telegram" href="https://t.me/patrol_police_zp" target="_blank">
+        <!--<a class="messenger-links" title="Telegram" href="https://t.me/patrol_police_zp" target="_blank">
             <img src="./images/telegram-icon.svg" alt="Telegram">
-        </a>
+        </a>-->
         
         <!-- Java Script -->  
         <script src="./js/data.js"></script>
