--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
         <!-- Open Graph data-->
         <meta property="og:title" content="ОРІЄНТУВАННЯ">
-        <meta property="og:description" content="Орієнтування транспортних засобiв" />
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://orientation.pp.ua/" />
+        <meta property="og:description" content="Орієнтування транспортних засобiв">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://orientation.pp.ua/">
         <meta property="og:image" content="./images/ukraine.webp">
 
         <!-- BGcolor Theme -->
