--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <button class="btn-toggle"></button>
         
         <!-- Java Script -->  
-        <script src="./js/data.js"></script>
+        <script src="./js/datas.js"></script>
         <script src="./js/header.js"></script> 
         <script src="./js/footer.js"></script>
         <script src="./js/script.js"></script>
