--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<!-- Рускій воєнний корабль, іді нах#й! -->
+<!--
+ * Author: Dovgal Dima
+ * Title: 'Orientation'
+ * URI: https://orientation.pp.ua/
+ * Date: 06.03.2022
+ -->
 <!DOCTYPE html>
 <html lang="uk">       
     <head>
