--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <!-- Java Script -->  
         <script src="./js/data.js"></script>
         <script src="./js/header.js"></script> 
-        <script src="./js/footer.js"></script>
+        <!-- <script src="./js/footer.js"></script> -->
         <script src="./js/script.js"></script>
         <script src="./js/go-top.js"></script> 
         <script src="./js/telegramLink.js"></script> 
