--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 </div>
             </div>
         </div>
-        <div class="container">
+        <!-- <div class="container">
             <footer id="footer"></footer>
-        </div>
+        </div> -->
         <button class="btn-toggle"></button>
         
         <!-- Java Script -->  
