--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         <title>Орієнтування</title>
 
         <!-- CSS Styles -->
-        <link rel="stylesheet" href="./css/style.css">
+        <!-- <link rel="stylesheet" href="./css/style.css"> -->
+     
+        <!-- Min CSS Styles -->
+        <link rel="stylesheet" href="./css/style.min.css">
         
         <!-- Shortcut Icon -->
         <link rel="shortcut icon" href="./images/ukraine.webp" type="image/png">
