--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         <!-- <script src="./js/footer.js"></script> -->
         <script src="./js/script.js"></script>
         <script src="./js/go-top.js"></script> 
-        <script src="./js/telegramLink.js"></script> 
+        <!-- <script src="./js/telegramLink.js"></script> -->
+        <script src="./js/telegramLink.min.js"></script> 
         <script src="./js/lightTheme.js"></script>
         <script src="./js/scrollIndicator.js"></script>
         <script>
