--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <script src="./js/lightTheme.js"></script>
         <script src="./js/scrollIndicator.js"></script>
         <script>
-            console.error('Рускій воєнний корабль, іді нах#й!');
+            console.warn('Рускій воєнний корабль, іді нах#й!');
         </script>       
     </body>  
 </html>
