--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         <script src="./js/header.js"></script> 
         <!-- <script src="./js/footer.js"></script> -->
         <script src="./js/script.js"></script>
-        <script src="./js/go-top.js"></script> 
+        <!-- <script src="./js/go-top.js"></script> -->
+        <script src="./js/goTop.min.js"></script> 
         <!-- <script src="./js/telegramLink.js"></script> -->
         <script src="./js/telegramLink.min.js"></script> 
         <script src="./js/lightTheme.js"></script>
