--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         
         <!-- Java Script -->  
         <script src="./js/data.js"></script>
-        <script src="./js/header.js"></script> 
+        <!-- <script src="./js/header.js"></script> -->
+        <script src="./js/header.min.js"></script>
         <!-- <script src="./js/footer.js"></script> -->
         <script src="./js/script.js"></script>
         <!-- <script src="./js/go-top.js"></script> -->
