--- a/table.html
+++ b/table.html
@@ -17,6 +17,10 @@
             padding: 5px;
         }
 
+        th {
+            background-color: #ccc;
+        }
+        
         .number {
             width: 50px;
             text-align: center;
