--- a/table.html
+++ b/table.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        * {
+            font-family: sans-serif;
+        }
+        
+        h2 {
+            text-align: center;
+        }
+        
         table {
             border: 1px solid grey;
             border-spacing: 0px;
@@ -33,6 +41,7 @@
     </style>
 </head>
 <body>
+    <h2>ОРІЄНТУВАННЯ</h2>
     <script src="https://orientation.pp.ua/js/data.js"></script>
     <script>
         let body = document.body;
