--- a/table.html
+++ b/table.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <style>
         * {
+            box-sizing: border-box;
             font-family: sans-serif;
         }
         
